--- a/electronics/static/electronics/css/product_detail.css
+++ b/electronics/static/electronics/css/product_detail.css
@@ -477,3 +477,8 @@
         transform: none;
     }
 }
+.interaction-button.liked {
+    border-color: var(--primary);
+    background: #02fce7ff;
+    color: red;
+}
