--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,4 @@
 {% extends 'base/base.html' %}
-
 {% load i18n %}
 {% load static %}
 
@@ -26,6 +25,35 @@
         <p><strong>{% trans "Location:" %}</strong> {{ user.profile.location|default:"-" }}</p>
         <p><strong>{% trans "Bio:" %}</strong> {{ user.profile.bio|default:"-" }}</p>
     </div>
+
+    <div class="profile-socials">
+    <h4>{% trans "Social Media" %}</h4>
+    <ul>
+        {% if user.profile.telegram %}
+            <li><a href="https://t.me/{{ user.profile.telegram }}" target="_blank">Telegram</a></li>
+        {% endif %}
+        {% if user.profile.facebook %}
+            <li><a href="https://facebook.com/{{ user.profile.facebook }}" target="_blank">Facebook</a></li>
+        {% endif %}
+        {% if user.profile.instagram %}
+            <li><a href="https://instagram.com/{{ user.profile.instagram }}" target="_blank">Instagram</a></li>
+        {% endif %}
+        {% if user.profile.linkedin %}
+            <li><a href="https://linkedin.com/in/{{ user.profile.linkedin }}" target="_blank">LinkedIn</a></li>
+        {% endif %}
+        {% if user.profile.imo %}
+            <li><a href="https://imo.im/{{ user.profile.imo }}" target="_blank">Imo</a></li>
+        {% endif %}
+        {% if user.profile.tiktok %}
+            <li><a href="https://tiktok.com/@{{ user.profile.tiktok }}" target="_blank">TikTok</a></li>
+        {% endif %}
+        {% if user.profile.email %}
+            <li><a href="mailto:{{ user.profile.email }}">{{ user.profile.email }}</a></li>
+        {% endif %}
+    </ul>
+</div>
+
+
 </div>
 {% endblock %}
 
