--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -72,6 +72,49 @@
             {{ form.location.errors }}
         </div>
 
+        <div class="form-row">
+    <label for="id_telegram">{{ form.telegram.label }}</label>
+    {{ form.telegram }}
+    {{ form.telegram.errors }}
+</div>
+
+<div class="form-row">
+    <label for="id_facebook">{{ form.facebook.label }}</label>
+    {{ form.facebook }}
+    {{ form.facebook.errors }}
+</div>
+
+<div class="form-row">
+    <label for="id_instagram">{{ form.instagram.label }}</label>
+    {{ form.instagram }}
+    {{ form.instagram.errors }}
+</div>
+
+<div class="form-row">
+    <label for="id_linkedin">{{ form.linkedin.label }}</label>
+    {{ form.linkedin }}
+    {{ form.linkedin.errors }}
+</div>
+
+<div class="form-row">
+    <label for="id_imo">{{ form.imo.label }}</label>
+    {{ form.imo }}
+    {{ form.imo.errors }}
+</div>
+
+<div class="form-row">
+    <label for="id_tiktok">{{ form.tiktok.label }}</label>
+    {{ form.tiktok }}
+    {{ form.tiktok.errors }}
+</div>
+
+<div class="form-row">
+    <label for="id_email">{{ form.email.label }}</label>
+    {{ form.email }}
+    {{ form.email.errors }}
+</div>
+
+
         <button type="submit" class="save-btn">
             {% trans "Save Changes" %}
         </button>
