--- a/vehicles/templates/vehicles/vehicle_list.html
+++ b/vehicles/templates/vehicles/vehicle_list.html
@@ -33,16 +33,14 @@
             </span>
     
             <div class="interaction-buttons">
- 
-                <button type="button" 
-                        class="interaction-button like-button"
-                        aria-label="Like this vehicle"
-                        data-item-id="{{ vehicle.id }}"
-                        data-action="like">
-                    <i class="fas fa-thumbs-up" aria-hidden="true"></i> 
-                    <span class="interaction-count">{{ vehicle.like_count }}</span>
-                </button>
-
+                <button type="button"
+        class="interaction-button like-button {% if vehicle.has_liked %}liked{% endif %}"
+        aria-label="Like this item"
+        data-item-id="{{ vehicle.id }}"
+        data-action="like">
+    <i class="fas fa-thumbs-up"></i>
+    <span class="interaction-count">{{ vehicle.like_count }}</span>
+</button>
                 <button type="button" 
                         class="interaction-button share-button"
                         aria-label="Share this vehicle"
