--- a/electronics/templates/electronics/product_list.html
+++ b/electronics/templates/electronics/product_list.html
@@ -35,7 +35,7 @@
             <div class="interaction-buttons">
 
                 <button type="button" 
-                        class="interaction-button like-button"
+                        class="interaction-button like-button {% if product.has_liked %}liked{% endif %}"
                         aria-label="Like this product"
                         data-item-id="{{ product.id }}"
                         data-action="like">
